mass update: git://github.com => git+https://github.com

--- a/archlinuxcn/aha-git/PKGBUILD
+++ b/archlinuxcn/aha-git/PKGBUILD
@@ -10,7 +10,7 @@ license=('MPL' 'LGPL')
 provides=('aha')
 conflicts=('aha')
 
-source=('git://github.com/theZiz/aha.git#branch=master')
+source=('git+https://github.com/theZiz/aha.git#branch=master')
 sha512sums=('SKIP')
 
 pkgver() {
