--- a/archlinuxcn/compton-tryone-git/PKGBUILD
+++ b/archlinuxcn/compton-tryone-git/PKGBUILD
@@ -15,7 +15,7 @@ optdepends=('dbus:          To control compton via D-Bus'
             'xorg-xprop:    For compton-trans')
 provides=('compton')
 conflicts=('compton')
-source=("git://github.com/tryone144/compton.git")
+source=("git+https://github.com/tryone144/compton.git")
 md5sums=("SKIP")
 
 pkgver() {
