--- a/archlinuxcn/glmark2-git/PKGBUILD
+++ b/archlinuxcn/glmark2-git/PKGBUILD
@@ -11,7 +11,7 @@ makedepends=('git' 'python2' 'udev')
 conflicts=('glmark2')
 provides=('glmark2')
 source=(
-    "$pkgname"::'git://github.com/glmark2/glmark2.git'
+    "$pkgname"::'git+https://github.com/glmark2/glmark2.git'
     )
 md5sums=(
     'SKIP'
