--- a/archlinuxcn/hid-nintendo-dkms/PKGBUILD
+++ b/archlinuxcn/hid-nintendo-dkms/PKGBUILD
@@ -10,7 +10,7 @@ license=('GPLv2')
 depends=('dkms' 'bc')
 makedepends=('git')
 provides=('hid-nintendo')
-source=("git://github.com/nicman23/dkms-hid-nintendo.git"
+source=("git+https://github.com/nicman23/dkms-hid-nintendo.git"
 "dkms.conf")
 md5sums=('SKIP'
          '7dee3612b857c0aeb9de37977ed64d36')
