--- a/archlinuxcn/i3-gaps-next-git/PKGBUILD
+++ b/archlinuxcn/i3-gaps-next-git/PKGBUILD
@@ -17,7 +17,7 @@ makedepends=('git' 'bison' 'flex' 'asciidoc' 'xmlto' 'meson')
 optdepends=('i3lock: For locking your screen.'
             'i3status: To display system information with a bar.')
 options=('docs')
-source=('git://github.com/Airblader/i3#branch=gaps-next')
+source=('git+https://github.com/Airblader/i3#branch=gaps-next')
 sha1sums=('SKIP')
 
 pkgver() {
