--- a/archlinuxcn/iease-music/PKGBUILD
+++ b/archlinuxcn/iease-music/PKGBUILD
@@ -10,7 +10,7 @@ depends=('gconf' 'libnotify' 'nss' 'libxss' 'libappindicator-gtk3' 'libxtst')
 #makedepends=('git' 'wget' 'rpmextract')
 options=()
 _rpmname="ieaseMusic-${pkgver}-linux-x86_64.rpm"
-#source=("git://github.com/trazyn/ieaseMusic.git")
+#source=("git+https://github.com/trazyn/ieaseMusic.git")
 source=("https://github.com/trazyn/ieaseMusic/releases/download/v${pkgver}/${_rpmname}")
 sha1sums=('30a8711d2aad18e8f4c9f52d98efebbe6012387e')
 install='iease-music.install'
