--- a/archlinuxcn/img2sdat-git/PKGBUILD
+++ b/archlinuxcn/img2sdat-git/PKGBUILD
@@ -12,7 +12,7 @@ depends=('python')
 makedepends=('git')
 provides=($_pkgname)
 conflicts=($_pkgname)
-source=($pkgname::git://github.com/xpirt/img2sdat.git
+source=($pkgname::git+https://github.com/xpirt/img2sdat.git
         img2sdat.sh)
 md5sums=('SKIP'
          'c4854eebbd20f489f6024678c9bb5db2')
