--- a/archlinuxcn/j4-dmenu-desktop-git/PKGBUILD
+++ b/archlinuxcn/j4-dmenu-desktop-git/PKGBUILD
@@ -12,7 +12,7 @@ depends=('dmenu')
 makedepends=('git' 'cmake')
 provides=('j4-dmenu-desktop')
 conflicts=('j4-dmenu-desktop')
-source=("git://github.com/enkore/j4-dmenu-desktop")
+source=("git+https://github.com/enkore/j4-dmenu-desktop")
 md5sums=('SKIP')
 
 pkgver() {
