--- a/archlinuxcn/ldoce5viewer-oldherl-git/PKGBUILD
+++ b/archlinuxcn/ldoce5viewer-oldherl-git/PKGBUILD
@@ -10,7 +10,7 @@ arch=('x86_64')
 url='https://github.com/oldherl/ldoce5viewer-pyqt5'
 depends=(python-pyqt5 python-lxml python-whoosh qt5-webkit qt5-multimedia gst-plugins-good gst-plugins-ugly python-gobject)
 makedepends=('git')
-source=("git://github.com/oldherl/ldoce5viewer-pyqt5.git")
+source=("git+https://github.com/oldherl/ldoce5viewer-pyqt5.git")
 md5sums=('SKIP')
 
 pkgver() {
