--- a/archlinuxcn/mednaffe/PKGBUILD
+++ b/archlinuxcn/mednaffe/PKGBUILD
@@ -13,7 +13,7 @@ optdepends=('mednafen')
 makedepends=('git')
 provides=('mednaffe')
 conflicts=('mednaffe')
-source=(git://github.com/AmatCoder/mednaffe.git)
+source=(git+https://github.com/AmatCoder/mednaffe.git)
 sha1sums=('SKIP')
 
 prepare () {
