--- a/archlinuxcn/moonplayer-plugins/PKGBUILD
+++ b/archlinuxcn/moonplayer-plugins/PKGBUILD
@@ -10,7 +10,7 @@ license=('GPL3')
 depends=('moonplayer' 'python')
 makedepends=('git')
 
-source=("git://github.com/coslyk/moonplayer-plugins")
+source=("git+https://github.com/coslyk/moonplayer-plugins")
 sha512sums=('SKIP')
 
 pkgver() {
