--- a/archlinuxcn/openmsx-catapult-git/PKGBUILD
+++ b/archlinuxcn/openmsx-catapult-git/PKGBUILD
@@ -9,7 +9,7 @@ license=('GPL')
 depends=('libxml2' 'wxgtk2' 'zlib' 'libjpeg' 'libpng' 'libtiff')
 makedepends=('python' 'git')
 optdepends=('openmsx')
-source=("git://github.com/openMSX/wxcatapult.git")
+source=("git+https://github.com/openMSX/wxcatapult.git")
 provides=("openmsx-catapult")
 conflicts=("openmsx-catapult")
 
