--- a/archlinuxcn/sdat2img-git/PKGBUILD
+++ b/archlinuxcn/sdat2img-git/PKGBUILD
@@ -12,7 +12,7 @@ depends=('python')
 makedepends=('git')
 provides=($_pkgname)
 conflicts=($_pkgname)
-source=($pkgname::git://github.com/xpirt/sdat2img.git)
+source=($pkgname::git+https://github.com/xpirt/sdat2img.git)
 md5sums=(SKIP)
 
 pkgver() {
