--- a/archlinuxcn/stdoutisatty-git/PKGBUILD
+++ b/archlinuxcn/stdoutisatty-git/PKGBUILD
@@ -9,7 +9,7 @@ arch=('x86_64')
 url='https://github.com/lilydjwg/stdoutisatty'
 license=('BSD')
 makedepends=('cmake' 'git')
-source=('stdoutisatty::git://github.com/lilydjwg/stdoutisatty.git')
+source=('stdoutisatty::git+https://github.com/lilydjwg/stdoutisatty.git')
 md5sums=('SKIP')
 
 pkgver() {
