--- a/archlinuxcn/vnote-git/PKGBUILD
+++ b/archlinuxcn/vnote-git/PKGBUILD
@@ -10,7 +10,7 @@ license=('MIT')
 depends=('qt5-base' 'qt5-webengine')
 makedepends=('qt5-svg' 'git')
 
-source=("git://github.com/vnotex/vnote.git")
+source=("git+https://github.com/vnotex/vnote.git")
 sha256sums=(SKIP)
 
 gitname="vnote"
