--- a/archlinuxcn/ydcv-rs-git/PKGBUILD
+++ b/archlinuxcn/ydcv-rs-git/PKGBUILD
@@ -11,7 +11,7 @@ license=('GPL2')
 depends=("openssl" "libdbus" "libxcb")
 optdepends=()
 makedepends=('git' 'cargo' 'python')
-source=('git://github.com/farseerfc/ydcv-rs.git')
+source=('git+https://github.com/farseerfc/ydcv-rs.git')
 sha256sums=('SKIP')
 
 pkgver() {
