--- a/archlinuxcn/ykdl-git/PKGBUILD
+++ b/archlinuxcn/ykdl-git/PKGBUILD
@@ -15,7 +15,7 @@ optdepends=(
 )
 provides=('ykdl')
 conflicts=('ykdl')
-source=("ykdl::git://github.com/zhangn1985/ykdl.git")
+source=("ykdl::git+https://github.com/zhangn1985/ykdl.git")
 sha256sums=('SKIP')
 
 pkgver() {
