--- a/archlinuxcn/zsh-completions-git/PKGBUILD
+++ b/archlinuxcn/zsh-completions-git/PKGBUILD
@@ -12,7 +12,7 @@ makedepends=(git)
 provides=(zsh-completions)
 conflicts=(zsh-completions)
 
-source=('git://github.com/zsh-users/zsh-completions.git')
+source=('git+https://github.com/zsh-users/zsh-completions.git')
 md5sums=('SKIP')
 
 pkgver() {
