--- a/archlinuxcn/deepin-desktop-base-git/PKGBUILD
+++ b/archlinuxcn/deepin-desktop-base-git/PKGBUILD
@@ -12,7 +12,7 @@ conflicts=('deepin-desktop-base')
 provides=('deepin-desktop-base')
 groups=('deepin-git')
 makedepends=('git')
-source=("$pkgname::git://github.com/linuxdeepin/deepin-desktop-base"
+source=("$pkgname::git+https://github.com/linuxdeepin/deepin-desktop-base"
         distribution.info)
 sha512sums=('SKIP'
             '27625e6d0786b8adacdb7c52806d4faa28d2ab6b319a593b3ea9bcb69f0cc18ea19b258d629e3a0069ef9a69503589b0285289caef39a1e85bbd99e915c7cd7d')
