--- a/archlinuxcn/munt-git/PKGBUILD
+++ b/archlinuxcn/munt-git/PKGBUILD
@@ -12,7 +12,7 @@ license=(LGPL2.1)
 depends=('qt5-base' 'qt5-multimedia' 'portaudio' 'libpulse' 'alsa-lib')
 makedepends=('git' 'cmake' 'gendesk' 'imagemagick')
 options=(staticlibs)
-source=(git://github.com/munt/munt.git)
+source=(git+https://github.com/munt/munt.git)
 provides=('munt')
 conflicts=('munt')
 md5sums=(SKIP)
