labelme: fix typo

--- a/archlinuxcn/labelme/PKGBUILD
+++ b/archlinuxcn/labelme/PKGBUILD
@@ -36,6 +36,6 @@ package() {
   install -Dm644 "labelme.desktop" -t "${pkgdir}/usr/share/applications"
   # make labelme use PySide2 by default, PyQt5 is not working
   # see also https://github.com/spyder-ide/qtpy/blob/master/qtpy/__init__.py
-  sed -i "3i impot PySide2" "${pkgdir}/usr/bin/labelme"
+  sed -i "3i import PySide2" "${pkgdir}/usr/bin/labelme"
 }
 # vim:set ts=2 sw=2 et:
