--- a/archlinuxcn/mpv-git/lilac.yaml
+++ b/archlinuxcn/mpv-git/lilac.yaml
@@ -2,7 +2,7 @@ maintainers:
   - github: CoelacanthusHex
     email: CoelacanthusHex@gmail.com
 
-build_prefix: extra-x86_64
+build_prefix: archlinuxcn-x86_64
 
 pre_build: vcs_update
 
