python-modin: fix wrong checksum

--- a/archlinuxcn/python-modin/lilac.yaml
+++ b/archlinuxcn/python-modin/lilac.yaml
@@ -5,6 +5,8 @@ update_on:
   - source: github
     github: modin-project/modin
     use_latest_release: true
+  - source: manual
+    manual: 1
   - alias: python
 # vim:set ts=2 sw=2 et:
 
