--- a/archlinuxcn/xfel-git/PKGBUILD
+++ b/archlinuxcn/xfel-git/PKGBUILD
@@ -1,20 +1,16 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=xfel-git
-pkgver=1.2.3.r23.gfa04579
+pkgver=1.2.6.r0.g2332380
 pkgrel=1
 pkgdesc="Tiny FEL tools for allwinner SOC, support RISC-V D1 chip."
-arch=('any')
+arch=('x86_64')
 url="https://github.com/xboot/xfel"
 license=('MIT')
-provides=()
+provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
-#replaces=(${pkgname})
 depends=('libusb')
-makedepends=('git')
-backup=()
-options=('!strip')
-#install=${pkgname}.install
+makedepends=('git' 'gcc')
 source=("${pkgname%-git}::git+${url}.git")
 sha256sums=('SKIP')
 
@@ -31,5 +27,5 @@ build() {
 package() {
     install -Dm0755 "${srcdir}/${pkgname%-git}/${pkgname%-git}" "${pkgdir}/usr/bin/${pkgname%-git}"
     install -Dm0644 "${srcdir}/${pkgname%-git}/99-xfel.rules" "${pkgdir}/etc/udev/rules.d/99-xfel.rules"
-    install -Dm0644 "${srcdir}/${pkgname%-git}/LICENSE" "${pkgdir}/usr/share/licenses/${pkgname%-git}/LICENSE"
+    install -Dm0644 "${srcdir}/${pkgname%-git}/LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
