--- a/archlinuxcn/mpv-git/lilac.yaml
+++ b/archlinuxcn/mpv-git/lilac.yaml
@@ -2,11 +2,14 @@ maintainers:
   - github: CoelacanthusHex
     email: CoelacanthusHex@gmail.com
 
-build_prefix: archlinuxcn-x86_64
+build_prefix: extra-x86_64
 
 pre_build: vcs_update
 
 post_build: git_pkgbuild_commit
+
+repo_depends:
+  - libsixel
 
 update_on:
   - source: github
