--- a/archlinuxcn/cambalache-git/PKGBUILD
+++ b/archlinuxcn/cambalache-git/PKGBUILD
@@ -2,14 +2,14 @@
 
 pkgname=cambalache-git
 _pkgname=cambalache
-pkgver=0.7.4.r140.gbe4ab0c
+pkgver=0.8.1.r169.gb567711
 pkgrel=1
 pkgdesc='A new RAD tool for Gtk 4 and 3 with a clear MVC design and data model first philosophy'
 url=https://gitlab.gnome.org/jpu/cambalache
 arch=(any)
 license=(LGPL)
 depends+=('python-gobject' 'glib2' 'gtk3' 'gtk4' 'python-lxml' 'webkit2gtk')
-makedepends+=(git 'meson>=0.50.0')
+makedepends+=(git 'meson>=0.50.0' 'cmake')
 conflicts=($_pkgname)
 provides=($_pkgname=$pkgver)
 source=('git+https://gitlab.gnome.org/jpu/cambalache.git')
