libcpufeatures-git: fix github git url

--- a/archlinuxcn/libcpufeatures-git/PKGBUILD
+++ b/archlinuxcn/libcpufeatures-git/PKGBUILD
@@ -30,7 +30,7 @@ conflicts=(
   'libvolk'
 )
 source=(
-  "${_pkgname}::git+git+https://github.com/google/cpu_features.git#branch=main"
+  "${_pkgname}::git+https://github.com/google/cpu_features.git#branch=main"
 )
 sha256sums=(
   'SKIP'
