osdlyrics-git: fix github git url

--- a/archlinuxcn/osdlyrics-git/PKGBUILD
+++ b/archlinuxcn/osdlyrics-git/PKGBUILD
@@ -17,7 +17,7 @@ optdepends=('gobject-introspection-runtime: proxy detection in Gnome'
             'kdebindings-python: proxy detection in KDE'
             'python-mpd2: to interface with MPD')
 install=$provides.install
-source=("${provides}::git+git+https://github.com/osdlyrics/osdlyrics.git#branch=master")
+source=("${provides}::git+https://github.com/osdlyrics/osdlyrics.git#branch=master")
 md5sums=(SKIP)
 
 pkgver() {
