python-torchaudio: rebuild with google-glog
$ python -c 'import torchaudio'
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/usr/lib/python3.10/site-packages/torchaudio/__init__.py", line 1, in <module>
    from torchaudio import _extension  # noqa: F401
  File "/usr/lib/python3.10/site-packages/torchaudio/_extension.py", line 27, in <module>
    _init_extension()
  File "/usr/lib/python3.10/site-packages/torchaudio/_extension.py", line 21, in _init_extension
    torch.ops.load_library(path)
  File "/usr/lib/python3.10/site-packages/torch/_ops.py", line 220, in load_library
    ctypes.CDLL(path)
  File "/usr/lib/python3.10/ctypes/__init__.py", line 374, in __init__
    self._handle = _dlopen(self._name, mode)
OSError: libglog.so.0: cannot open shared object file: No such file or directory

--- a/archlinuxcn/python-torchaudio/lilac.yaml
+++ b/archlinuxcn/python-torchaudio/lilac.yaml
@@ -18,3 +18,8 @@ update_on:
   - source: alpm
     alpm: python-pytorch
     strip_release: true
+
+  # Yet another Google library that does not really care about ABI stability...
+  - source: alpm
+    alpm: google-glog
+    strip_release: true
