3dslicer-nightly-bin: update version format

--- a/archlinuxcn/3dslicer-nightly-bin/PKGBUILD
+++ b/archlinuxcn/3dslicer-nightly-bin/PKGBUILD
@@ -13,7 +13,7 @@ depends=(
   'glib2'
 )
 makedepends=('gendesk')
-provides=(3dslicer=${pkgver})
+provides=(3dslicer)
 conflicts=('3dslicer')
 source=(
     "${_pkgname}-${pkgver}.tar.gz::http://download.slicer.org/download?os=linux&stability=nightly"
