--- a/archlinuxcn/3dslicer-nightly-bin/lilac.yaml
+++ b/archlinuxcn/3dslicer-nightly-bin/lilac.yaml
@@ -4,7 +4,6 @@ maintainers:
 build_prefix: extra-x86_64
 
 update_on:
-  - source: regex
-    regex: version (\d+.\d+.\d+)
-    url: https://download.slicer.org/
+  - source: github
+    github: Slicer/Slicer
     lilac_throttle: 20d
