--- a/archlinuxcn/mariadb-git/PKGBUILD
+++ b/archlinuxcn/mariadb-git/PKGBUILD
@@ -2,27 +2,31 @@
 # Maintainer: Christian Hesse <mail@eworm.de>
 
 pkgbase=mariadb-git
-_pkgbase=mariadb
 pkgname=('mariadb-libs-git' 'mariadb-clients-git' 'mariadb-git' 'mytop-git')
 pkgdesc='Fast SQL database server, derived from MySQL'
-pkgver=10.4.24.r72.g8afabca6fd1
-pkgrel=22
-arch=('x86_64')
-license=('GPL')
+pkgver=10.8.2.r613.g0b14dbd45b5
+pkgrel=1
+arch=($CARCH)
+license=(GPL)
 url='https://mariadb.org/'
-makedepends=('git' 'boost' 'bzip2' 'cmake' 'jemalloc' 'libaio' 'libxml2' 'lz4' 'lzo'
-             'openssl' 'systemd' 'zlib' 'zstd')
-source=("$_pkgbase::git+https://github.com/MariaDB/server.git"
-        '0001-arch-specific.patch')
+makedepends=(git boost bzip2 cmake jemalloc libaio libxcrypt libxml2 lz4 lzo openssl systemd zlib zstd curl krb5 cracklib)
+conflicts=(${pkgbase%-git})
+provides=(${pkgbase%-git})
+source=("$pkgbase::git+https://github.com/MariaDB/server.git"
+		0001-arch-specific.patch)
 sha256sums=('SKIP'
-            'e14e1ce5f0d7117dfa7870e92e1224d4ca5e6b3fc395ab6da78aa777e3e403ab')
+            '3289efb3452d199aec872115f35da3f1d6fd4ce774615076690e9bc8afae1460')
+
 pkgver() {
-  cd "$_pkgbase"
+  cd "$pkgbase"
   git describe --long --tags | sed 's/^mariadb.//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $_pkgbase/
+  cd $pkgbase/
+
+  # For some reason, it doesn't automatically checkout the default remote branch
+  git checkout 10.9
 
   # Arch Linux specific patches:
   #  * enable PrivateTmp for a little bit more security
@@ -86,59 +90,49 @@ build() {
     -DWITH_ZLIB=system
   )
 
-  mkdir build
-  cd build
+  cmake -B build -S $pkgbase "${_cmake_options[@]}"
 
-  cmake ../"$_pkgbase" "${_cmake_options[@]}"
-
-  make
-}
-
-check() {
-  cd build/mysql-test
-
-  # Takes *really* long, so disabled by default.
-  #./mtr --parallel=5 --mem --force --max-test-fail=0
+  cmake --build build
 }
 
 package_mariadb-libs-git() {
   pkgdesc='MariaDB libraries (GIT version)'
-  depends=('bzip2' 'libaio' 'lz4' 'lzo' 'openssl' 'xz' 'zlib' 'krb5')
-  conflicts=('libmysqlclient' 'libmariadbclient' 'mariadb-connector-c')
-  provides=('libmariadbclient' 'mariadb-connector-c' 'mariadb-libs')
-  replaces=('libmariadbclient')
-
-  cd build
-
+  depends=(bzip2 libaio libxcrypt libcrypt.so lz4 lzo openssl xz zlib)
+  optdepends=('krb5: for gssapi authentication')
+  conflicts=(mariadb-libs libmysqlclient{,-git} libmariadbclient{,-git} mariadb-connector-c{,-git})
+  provides=(mariadb-libs libmariadbclient{,-git} mariadb-connector-c{,-git} libmariadb.so libmariadbd.so)
+  replaces=(libmariadbclient-git)
   for dir in libmariadb libmysqld libservices include; do
-    make -C "$dir" DESTDIR="$pkgdir" install
+    DESTDIR="$pkgdir" cmake --install "build/$dir"
   done
 
-  ln -s mariadb_config "$pkgdir"/usr/bin/mysql_config
-  install -D -m0644 "$srcdir"/"$_pkgbase"/man/mysql_config.1 "$pkgdir"/usr/share/man/man1/mysql_config.1
+  ln -s build/mariadb_config "$pkgdir"/usr/bin/mariadb-config
+  ln -s build/mariadb_config "$pkgdir"/usr/bin/mysql_config
+  install -D -m0644 $pkgbase/man/mysql_config.1 "$pkgdir"/usr/share/man/man1/mysql_config.1
 
-  install -D -m0644 support-files/mariadb.pc "$pkgdir"/usr/share/pkgconfig/mariadb.pc
-  install -D -m0644 "$srcdir"/"$_pkgbase"/support-files/mysql.m4 "$pkgdir"/usr/share/aclocal/mysql.m4
+  install -D -m0644 build/support-files/mariadb.pc "$pkgdir"/usr/share/pkgconfig/mariadb.pc
+  install -D -m0644 $pkgbase/support-files/mysql.m4 "$pkgdir"/usr/share/aclocal/mysql.m4
 
   cd "$pkgdir"
 
   # remove static libraries
   rm usr/lib/*.a
+
+  # remove man pages
+  rm -r usr/share/man
 }
 
 package_mariadb-clients-git() {
   pkgdesc='MariaDB client tools (GIT version)'
-  depends=("mariadb-libs-git" 'jemalloc')
-  conflicts=('mysql-clients' 'mariadb-clients')
-  provides=("mysql-clients=$pkgver" 'mariadb-clients')
-
-  cd build
-
-  make -C client DESTDIR="$pkgdir" install
+  depends=(mariadb-libs-git=$pkgver jemalloc)
+  conflicts=(mysql-clients{,-git})
+  provides=(mysql-clients=$pkgver)
+  
+  DESTDIR="$pkgdir" cmake --install build/client
 
   # install man pages
   for man in mysql mysql_plugin mysql_upgrade mysqladmin mysqlbinlog mysqlcheck mysqldump mysqlimport mysqlshow mysqlslap mysqltest; do
-    install -D -m0644 "$srcdir"/"$_pkgbase"/man/"$man.1" "$pkgdir"/usr/share/man/man1/"$man.1"
+    install -D -m0644 $pkgbase/man/"$man.1" "$pkgdir"/usr/share/man/man1/"$man.1"
   done
 }
 
@@ -148,29 +142,29 @@ package_mariadb-git() {
           'etc/my.cnf.d/client.cnf'
           'etc/my.cnf.d/enable_encryption.preset'
           'etc/my.cnf.d/mysql-clients.cnf'
-          'etc/my.cnf.d/server.cnf')
+          'etc/my.cnf.d/server.cnf'
+          'etc/my.cnf.d/s3.cnf'
+          'etc/my.cnf.d/spider.cnf'
+          'etc/security/user_map.conf')
   install=mariadb.install
-  depends=("mariadb-clients-git" 'inetutils' 'systemd-libs' 'libxml2' 'zstd' 'python')
-  optdepends=('galera: for MariaDB cluster with Galera WSREP'
-              'perl-dbd-mysql: for mysqlhotcopy, mysql_convert_table_format and mysql_setpermission')
-  conflicts=('mysql' 'mariadb')
-  provides=("mysql=$pkgver" 'mariadb')
-  options=('emptydirs')
+  depends=(mariadb-clients-git=$pkgver systemd-libs libxml2 zstd)
+  optdepends=('cracklib: for cracklib plugin'
+              'curl: for ha_s3 plugin'
+              'galera: for MariaDB cluster with Galera WSREP'
+              'python-mysqlclient: for myrocks_hotbackup'
+              'perl-dbd-mariadb: for mariadb-hotcopy, mariadb-convert-table-format and mariadb-setpermission')
+  conflicts=(mysql{,-git})
+  provides=(mysql=$pkgver)
+  options=(emptydirs)
 
-  cd build
-
-  make DESTDIR="$pkgdir" install
+  DESTDIR="$pkgdir" cmake --install build
 
   cd "$pkgdir"
 
   # no SysV init, please!
-  rm -rf etc/logrotate.d
+  rm -r etc/logrotate.d
   rm usr/bin/rcmysql
   rm usr/share/mysql/{binary-configure,mysql{,d_multi}.server}
-
-  # link service files with old name for compatibility
-  ln -s mariadb.service usr/lib/systemd/system/mysqld.service
-  ln -s mariadb@.service usr/lib/systemd/system/mysqld@.service
 
   # move to proper licenses directories
   install -d usr/share/licenses/mariadb
@@ -179,30 +173,34 @@ package_mariadb-git() {
   # move it where one might look for it
   mv usr/share/{groonga{,-normalizer-mysql},doc/mariadb/}
 
+  # move to pam directories
+  install -d {etc,usr/lib}/security
+  mv usr/share/user_map.conf etc/security/
+  mv usr/share/pam_user_map.so usr/lib/security/
+
   # already installed to real systemd unit directory or useless
-  rm -rf usr/share/mysql/systemd/
-  rm -rf usr/lib/systemd/system/mariadb@bootstrap.service.d
+  rm -r usr/share/mysql/systemd/
+  rm -r usr/lib/systemd/system/mariadb@bootstrap.service.d
 
   # provided by mariadb-libs
-  rm usr/bin/mariadb_config
-  rm usr/bin/mysql_config
-  rm -rf usr/include/
+  rm usr/bin/{mariadb{_,-},mysql_}config
+  rm -r usr/include/
   rm usr/share/man/man1/mysql_config.1
-  rm -rf usr/share/{aclocal,pkgconfig}
+  rm -r usr/share/aclocal
   rm usr/lib/lib*
+  rm -r usr/lib/pkgconfig
   rm usr/lib/mysql/plugin/{auth_gssapi_client,caching_sha2_password,client_ed25519,dialog,mysql_clear_password,sha256_password}.so
-  rm -rf usr/lib/pkgconfig/
 
   # provided by mariadb-clients
   rm usr/bin/mysql{,_plugin,_upgrade,admin,binlog,check,dump,import,show,slap,test}
-  rm usr/bin/mariadb{,-{admin,binlog,check,dump,import,plugin,show,slap,test,upgrade}}
+  rm usr/bin/mariadb{,-{admin,binlog,check,conv,dump,import,plugin,show,slap,test,upgrade}}
   rm usr/share/man/man1/mysql{,_plugin,_upgrade,admin,binlog,check,dump,import,show,slap,test}.1
 
   # provided by mytop
   rm usr/bin/mytop
 
   # not needed
-  rm -rf usr/{data,mysql-test,sql-bench}
+  rm -r usr/{mysql-test,sql-bench}
   rm usr/share/man/man1/mysql-test-run.pl.1
 }
 
